--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
           </li>
 
           
-          <li class="dropdown"><a href="#"><span>More Pages</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <!-- <li class="dropdown"><a href="#"><span>More Pages</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="news-details.html">News Details</a></li>
               <li><a href="event-details.html">Event Details</a></li>
@@ -91,7 +91,7 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-    </div>
+    </div> -->
   </header>
 
   <main class="main">
