--- a/faculty-staff.html
+++ b/faculty-staff.html
@@ -53,7 +53,7 @@
           <li><a href="index.html">Home</a></li>
           <li class="dropdown"><a href="about.html"><span>About</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="about.html">About Us</a></li>
+              <!-- <li><a href="about.html">About Us</a></li>
               <li><a href="admissions.html">Admissions</a></li>
               <li><a href="academics.html">Academics</a></li>
               <li><a href="faculty-staff.html" class="active">งานอดิเรก &amp; Staff</a></li>
@@ -98,7 +98,7 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-    </div>
+    </div> -->
   </header>
 
   <main class="main">
@@ -138,10 +138,10 @@
                 <div class="department-info mb-4">
                   <h3>เพลงโปรด</h3>
                  
-                    <iframe width="300" height="300" src="https://www.youtube.com/embed/ic8j13piAhQ?si=DeNFVpXZjZcO4GJa" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <iframe width="300" height="300" src="https://www.youtube.com/embed/ic8j13piAhQ?si=DeNFVpXZjZcO4GJa" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>Taylor Swift - Cruel Summer</iframe>
                     <iframe width="300" height="300" src="https://www.youtube.com/embed/JgDNFQ2RaLQ?si=FDVmTdRf__fdjX49" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     <iframe width="300" height="300" src="https://www.youtube.com/embed/pRfmrE0ToTo?si=bw_SWjizxGg2eVnU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                </div>
+                  </div>
               </div>     
            </div>
           </div>
