--- a/admissions.html
+++ b/admissions.html
@@ -48,7 +48,7 @@
         <h1 class="sitename">Nid Banthong</h1>
       </a>
 
-      <nav id="navmenu" class="navmenu">
+      <!-- <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="index.html">Home</a></li>
           <li class="dropdown"><a href="about.html"><span>About</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
@@ -59,9 +59,9 @@
               <li><a href="faculty-staff.html">Faculty &amp; Staff</a></li>
               <li><a href="campus-facilities.html">Campus &amp; Facilities</a></li>
             </ul>
-          </li>
+          </li> -->
 
-          <li><a href="students-life.html">Students Life</a></li>
+          <!-- <li><a href="students-life.html">Students Life</a></li>
           <li><a href="news.html">News</a></li>
           <li><a href="events.html">Events</a></li>
           <li><a href="alumni.html">Alumni</a></li>
@@ -92,13 +92,13 @@
               <li><a href="#">Dropdown 3</a></li>
               <li><a href="#">Dropdown 4</a></li>
             </ul>
-          </li>
+          </li>-->
           <li><a href="contact.html">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-    </div>
+    </div> 
   </header>
 
   <main class="main">
