--- a/contact.html
+++ b/contact.html
@@ -50,8 +50,8 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <!-- <li><a href="index.html">Home</a></li>
-          <li class="dropdown"><a href="about.html"><span>About</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <li><a href="index.html">Home</a></li>
+          <!-- <li class="dropdown"><a href="about.html"><span>About</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="about.html">About Us</a></li>
               <li><a href="admissions.html">Admissions</a></li>
