--- a/contact.html
+++ b/contact.html
@@ -48,10 +48,10 @@
         <h1 class="sitename">Nid Banthong</h1>
       </a>
 
-      <nav id="navmenu" class="navmenu">
+      <!-- <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="index.html">Home</a></li>
-          <!-- <li class="dropdown"><a href="about.html"><span>About</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <li class="dropdown"><a href="about.html"><span>About</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="about.html">About Us</a></li>
               <li><a href="admissions.html">Admissions</a></li>
@@ -92,13 +92,13 @@
               <li><a href="#">Dropdown 3</a></li>
               <li><a href="#">Dropdown 4</a></li>
             </ul>
-          </li> -->
+          </li>
           <li><a href="contact.html" class="active">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-    </div>
+    </div> -->
   </header>
 
   <main class="main">
